docs/api/qiskit/0.19/qiskit.quantum_info.Clifford.mdx
---
title: Clifford (v0.19)
description: API reference for qiskit.quantum_info.Clifford in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Clifford
---

# Clifford

<Class id="qiskit.quantum_info.Clifford" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/symplectic/clifford.py" signature="Clifford(data, validate=True)" modifiers="class">
  An N-qubit unitary operator from the Clifford group.

  **Representation**

  An *N*-qubit Clifford operator is stored as a length *2N* [`StabilizerTable`](qiskit.quantum_info.StabilizerTable "qiskit.quantum_info.StabilizerTable") using the convention from reference \[1].

  *   Rows 0 to *N-1* are the *destabilizer* group generators
  *   Rows *N-1* to *2N-1* are the *stabilizer* group generators.

  The internal [`StabilizerTable`](qiskit.quantum_info.StabilizerTable "qiskit.quantum_info.StabilizerTable") for the Clifford can be accessed using the [`table`](qiskit.quantum_info.Clifford#table "qiskit.quantum_info.Clifford.table") attribute. The destabilizer or stabilizer rows can each be accessed as a length-N Stabilizer table using [`destabilizer`](qiskit.quantum_info.Clifford#destabilizer "qiskit.quantum_info.Clifford.destabilizer") and [`stabilizer`](qiskit.quantum_info.Clifford#stabilizer "qiskit.quantum_info.Clifford.stabilizer") attributes.

  A more easily human readible representation of the Clifford operator can be obtained by calling the [`to_dict()`](qiskit.quantum_info.Clifford#to_dict "qiskit.quantum_info.Clifford.to_dict") method. This representation is also used if a Clifford object is printed as in the following example

  ```python
  from qiskit import QuantumCircuit
  from qiskit.quantum_info import Clifford

  # Bell state generation circuit
  qc = QuantumCircuit(2)
  qc.h(0)
  qc.cx(0, 1)
  cliff = Clifford(qc)

  # Print the Clifford
  print(cliff)

  # Print the Clifford destabilizer rows
  print(cliff.destabilizer)

  # Print the Clifford stabilizer rows
  print(cliff.stabilizer)
  ```

  ```
  Clifford: Stabilizer = ['+XX', '+ZZ'], Destabilizer = ['+IZ', '+XI']
  StabilizerTable: ['+IZ', '+XI']
  StabilizerTable: ['+XX', '+ZZ']
  ```

  **Circuit Conversion**

  Clifford operators can be initialized from circuits containing *only* the following Clifford gates: `IGate`, `XGate`, `YGate`, `ZGate`, `HGate`, `SGate`, `SdgGate`, `CXGate`, `CZGate`, `SwapGate`. They can be converted back into a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"), or [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate") object using the [`to_circuit()`](qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit") or [`to_instruction()`](qiskit.quantum_info.Clifford#to_instruction "qiskit.quantum_info.Clifford.to_instruction") methods respectively. Note that this decomposition is not necessarily optimal in terms of number of gates.

  <Admonition title="Note" type="note">
    A minimally generating set of gates for Clifford circuits is the `HGate` and `SGate` gate and *either* the `CXGate` or `CZGate` two-qubit gate.
  </Admonition>

  Clifford operators can also be converted to [`Operator`](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator") objects using the [`to_operator()`](qiskit.quantum_info.Clifford#to_operator "qiskit.quantum_info.Clifford.to_operator") method. This is done via decomposing to a circuit, and then simulating the circuit as a unitary operator.

  **References**

  1.  S. Aaronson, D. Gottesman, *Improved Simulation of Stabilizer Circuits*, Phys. Rev. A 70, 052328 (2004). [arXiv:quant-ph/0406196](https://arxiv.org/abs/quant-ph/0406196)

  Initialize an operator object.

  ## Attributes

  <span id="clifford-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.Clifford.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="clifford-destabilizer" />

  ### destabilizer

  <Attribute id="qiskit.quantum_info.Clifford.destabilizer">
    Return the destabilizer block of the StabilizerTable.
  </Attribute>

  <span id="clifford-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.Clifford.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="clifford-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Clifford.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="clifford-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.Clifford.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="clifford-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.Clifford.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  <span id="clifford-stabilizer" />

  ### stabilizer

  <Attribute id="qiskit.quantum_info.Clifford.stabilizer">
    Return the stabilizer block of the StabilizerTable.
  </Attribute>

  <span id="clifford-table" />

  ### table

  <Attribute id="qiskit.quantum_info.Clifford.table">
    Return StabilizerTable
  </Attribute>

  ## Methods

  <span id="clifford-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.Clifford.__call__" signature="Clifford.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="clifford-getitem" />

  ### \_\_getitem\_\_

  <Function id="qiskit.quantum_info.Clifford.__getitem__" signature="Clifford.__getitem__(key)">
    Return a stabilizer Pauli row
  </Function>

  <span id="clifford-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.Clifford.__mul__" signature="Clifford.__mul__(other)" />

  <span id="clifford-add" />

  ### add

  <Function id="qiskit.quantum_info.Clifford.add" signature="Clifford.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="clifford-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Clifford.adjoint" signature="Clifford.adjoint()">
    Return the conjugate transpose of the Clifford
  </Function>

  <span id="clifford-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Clifford.compose" signature="Clifford.compose(other, qargs=None, front=False)">
    Return the composed operator.

    **Parameters**

    *   **other** ([*Clifford*](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The operator self @ other.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")

    **Raises**

    **QiskitError** – if operators have incompatible dimensions for composition.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for matrix operators. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.Clifford#dot "qiskit.quantum_info.Clifford.dot") method.
  </Function>

  <span id="clifford-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Clifford.conjugate" signature="Clifford.conjugate()">
    Return the conjugate of the Clifford.
  </Function>

  <span id="clifford-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Clifford.copy" signature="Clifford.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="clifford-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Clifford.dot" signature="Clifford.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Clifford*](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The operator self \* other.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")

    **Raises**

    **QiskitError** – if operators have incompatible dimensions for composition.
  </Function>

  <span id="clifford-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Clifford.expand" signature="Clifford.expand(other)">
    Return the tensor product operator other ⊗ self.

    **Parameters**

    **other** ([*Clifford*](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")) – an operator object.

    **Returns**

    the tensor product operator other ⊗ self.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")
  </Function>

  <span id="clifford-from-circuit" />

  ### from\_circuit

  <Function id="qiskit.quantum_info.Clifford.from_circuit" signature="Clifford.from_circuit(circuit)" modifiers="static">
    Initialize from a QuantumCircuit or Instruction.

    **Parameters**

    **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction")) – instruction to initialize.

    **Returns**

    the Clifford object for the instruction.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")

    **Raises**

    **QiskitError** – if the input instruction is non-Clifford or contains classical register instruction.
  </Function>

  <span id="clifford-from-dict" />

  ### from\_dict

  <Function id="qiskit.quantum_info.Clifford.from_dict" signature="Clifford.from_dict(obj)" modifiers="static">
    Load a Clifford from a dictionary
  </Function>

  <span id="clifford-from-label" />

  ### from\_label

  <Function id="qiskit.quantum_info.Clifford.from_label" signature="Clifford.from_label(label)" modifiers="static">
    Return a tensor product of single-qubit Clifford gates.

    **Parameters**

    **label** (*string*) – single-qubit operator string.

    **Returns**

    The N-qubit Clifford operator.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")

    **Raises**

    **QiskitError** – if the label contains invalid characters.

    #### Additional Information:

    The labels correspond to the single-qubit Cliffords are

    *   *   Label
        *   Stabilizer
        *   Destabilizer
    *   *   `"I"`
        *   +Z
        *   +X
    *   *   `"X"`
        *   -Z
        *   +X
    *   *   `"Y"`
        *   -Z
        *   -X
    *   *   `"Z"`
        *   +Z
        *   -X
    *   *   `"H"`
        *   +X
        *   +Z
    *   *   `"S"`
        *   +Z
        *   +Y
  </Function>

  <span id="clifford-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Clifford.input_dims" signature="Clifford.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="clifford-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Clifford.is_unitary" signature="Clifford.is_unitary()">
    Return True if the Clifford table is valid.
  </Function>

  <span id="clifford-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.Clifford.multiply" signature="Clifford.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="clifford-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Clifford.output_dims" signature="Clifford.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="clifford-power" />

  ### power

  <Function id="qiskit.quantum_info.Clifford.power" signature="Clifford.power(n)">
    Return the compose of a operator with itself n times.

    **Parameters**

    **n** (*int*) – the number of times to compose with self (n>0).

    **Returns**

    the n-times composed operator.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if the input and output dimensions of the operator are not equal, or the power is not a positive integer.
  </Function>

  <span id="clifford-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Clifford.reshape" signature="Clifford.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="clifford-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.Clifford.set_atol" signature="Clifford.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="clifford-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.Clifford.set_rtol" signature="Clifford.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="clifford-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.Clifford.subtract" signature="Clifford.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="clifford-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Clifford.tensor" signature="Clifford.tensor(other)">
    Return the tensor product operator self ⊗ other.

    **Parameters**

    **other** ([*Clifford*](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")) – a operator subclass object.

    **Returns**

    the tensor product operator self ⊗ other.

    **Return type**

    [Clifford](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford")
  </Function>

  <span id="clifford-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.quantum_info.Clifford.to_circuit" signature="Clifford.to_circuit()">
    Return a QuantumCircuit implementing the Clifford.

    For N \<= 3 qubits this is based on optimal CX cost decomposition from reference \[1]. For N > 3 qubits this is done using the general non-optimal compilation routine from reference \[2].

    **Returns**

    a circuit implementation of the Clifford.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    **References**

    1.  S. Bravyi, D. Maslov, *Hadamard-free circuits expose the structure of the Clifford group*, [arXiv:2003.09412 \[quant-ph\]](https://arxiv.org/abs/2003.09412)
    2.  S. Aaronson, D. Gottesman, *Improved Simulation of Stabilizer Circuits*, Phys. Rev. A 70, 052328 (2004). [arXiv:quant-ph/0406196](https://arxiv.org/abs/quant-ph/0406196)
  </Function>

  <span id="clifford-to-dict" />

  ### to\_dict

  <Function id="qiskit.quantum_info.Clifford.to_dict" signature="Clifford.to_dict()">
    Return dictionary represenation of Clifford object.
  </Function>

  <span id="clifford-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Clifford.to_instruction" signature="Clifford.to_instruction()">
    Return a Gate instruction implementing the Clifford.
  </Function>

  <span id="clifford-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.quantum_info.Clifford.to_matrix" signature="Clifford.to_matrix()">
    Convert operator to Numpy matrix.
  </Function>

  <span id="clifford-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Clifford.to_operator" signature="Clifford.to_operator()">
    Convert to an Operator object.
  </Function>

  <span id="clifford-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Clifford.transpose" signature="Clifford.transpose()">
    Return the transpose of the Clifford.
  </Function>
</Class>

